<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chapter11</string>
    <string name="app_title1">加速度センサーの値を取得したい</string>
    <string name="app_title2">ジャイロセンサーの値を取得したい</string>
    <string name="app_title3">デバイスの現在地を取得したい</string>
    <string name="app_title4">デバイスの方位を取得したい</string>
    <string name="app_title5">気圧センサーを取得したい</string>
    <string name="app_title6">近接センサーの値を取得したい</string>
    <string name="app_title7">カメラプレビューを表示したい</string>
    <string name="app_title8">写真を保存したい</string>
    <string name="app_title9">露出やオートフォーカスを利用したい</string>
    <string name="app_title10">カメラフラッシュを使用したい</string>
    <string name="app_title11">顔検出機能を利用したい</string>
    <string name="app_title12">NFCタグを読み取りたい</string>
    <string name="app_title13">NFCタグを書き込みたい</string>
    <string name="app_title14">ネットワークの状態を取得したい</string>
    <string name="app_title15">機内モードの切り替えを検出したい</string>
    <string name="action_settings">Settings</string>
    <string name="ch1101_label_xaxis">X軸</string>
    <string name="ch1101_label_yaxis">Y軸</string>
    <string name="ch1101_label_zaxis">Z軸</string>
    <string name="ch1103_label_latitude">緯度</string>
    <string name="ch1103_label_longitude">経度</string>
    <string name="ch1104_label_azimuth">方位角</string>
    <string name="ch1104_label_azimuth_north">北：0〜90度</string>
    <string name="ch1104_label_azimuth_west">東：90〜180度</string>
    <string name="ch1104_label_azimuth_south">南：180〜270度</string>
    <string name="ch1104_label_azimuth_east">西：270〜360度</string>
    <string name="ch1106_label_off">切</string>
    <string name="ch1106_label_on">入</string>
    <string name="ch1106_label_proximity">近接センサー</string>
    <string name="ch1106_label_pause_of_the_call">デバイスを耳に当て通話のポーズをしてみてください</string>
    <string name="ch1109_label_autofocus">オートフォーカス</string>
    <string name="ch1109_label_exposure">露出 :</string>
    <string name="ch1110_label_flash">フラッシュ :</string>
    <string name="ch1110_label_torch">トーチ</string>
    <string name="ch1111_camera_maxface">最大顔認識数 :%s</string>
    <string name="ch1114_label_network_mobile">モバイルネットワークが有効になっています。</string>
    <string name="ch1114_label_network_wifi">Wi-Fiが有効になっています。</string>
    <string name="ch1114_label_network_unknown">ネットワークが確認できません</string>
    <string name="ch1115_label_airplanemode_enable">機内モードが有効になっています</string>
    <string name="ch1115_label_airplanemode_disable">機内モードが無効になっています</string>
    <string name="label_read">読み取り</string>
    <string name="label_write">書き込み</string>
    <string name="hint_write">ここに入力</string>
    <string name="error_nfc_disable">NFCが無効になっています\n設定画面でNFCを有効にしてください</string>
    <string name="error_nfc_nosupport">NFCが搭載されていない端末です</string>
    <string name="error_connect">タグとの通信に失敗しました</string>
    <string name="error_format">書き込むデータを入力してください</string>
    <string name="write_success">書き込みました</string>
    <string name="write_failure">書き込むことができませんでした</string>

</resources>