<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_xlarge"
    android:stretchColumns="1" >

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/ch1104_label_azimuth" />

        <TextView
            android:id="@+id/Azimuth"
            android:gravity="center" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/padding_xlarge"
        android:layout_marginTop="@dimen/padding_medium" >

        <TextView android:text="@string/ch1104_label_azimuth_north" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/padding_xlarge"
        android:layout_marginTop="@dimen/padding_medium" >

        <TextView android:text="@string/ch1104_label_azimuth_west" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/padding_xlarge"
        android:layout_marginTop="@dimen/padding_medium" >

        <TextView android:text="@string/ch1104_label_azimuth_south" />
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/padding_xlarge"
        android:layout_marginTop="@dimen/padding_medium" >

        <TextView android:text="@string/ch1104_label_azimuth_east" />
    </TableRow>

</TableLayout>