<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_xlarge"
    android:stretchColumns="1" >

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/ch1101_label_xaxis" />

        <TextView
            android:id="@+id/DataX"
            android:gravity="center" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/ch1101_label_yaxis" />

        <TextView
            android:id="@+id/DataY"
            android:gravity="center" />
    </TableRow>

    <TableRow android:layout_margin="@dimen/padding_xlarge" >

        <TextView android:text="@string/ch1101_label_zaxis" />

        <TextView
            android:id="@+id/DataZ"
            android:gravity="center" />
    </TableRow>

</TableLayout>